logs/collective.externaleditor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ExternalEditor'...
Compiling './lib/python3.5/site-packages/Products/ExternalEditor/ExternalEditor.py'...
***   File "./lib/python3.5/site-packages/Products/ExternalEditor/ExternalEditor.py", line 221
    raise 'BadRequest', 'Object does not support external editing'
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ExternalEditor/tests'...
Listing './lib/python3.5/site-packages/Products.ExternalEditor-2.0.3.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/externaleditor'...
Listing './lib/python3.5/site-packages/collective/externaleditor/Extensions'...
Listing './lib/python3.5/site-packages/collective/externaleditor/browser'...
Listing './lib/python3.5/site-packages/collective/externaleditor/locales'...
Listing './lib/python3.5/site-packages/collective/externaleditor/locales/fr'...
Listing './lib/python3.5/site-packages/collective/externaleditor/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/externaleditor/profiles'...
Listing './lib/python3.5/site-packages/collective/externaleditor/profiles/default'...
Listing './lib/python3.5/site-packages/collective/externaleditor/profiles/uninstall'...
Listing './lib/python3.5/site-packages/collective/externaleditor/skins'...
Listing './lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor'...
Compiling './lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/externalEditorEnabled.py'...
***   File "./lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/externalEditorEnabled.py", line 13
    return context.restrictedTraverse('@@externalEditorEnabled').available()
                                                                           ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/external_edit.py'...
***   File "./lib/python3.5/site-packages/collective/externaleditor/skins/externaleditor/external_edit.py", line 10
    return context.REQUEST.RESPONSE.redirect('%s/@@external_edit' % context.absolute_url())
                                                                                          ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/collective/externaleditor/tests'...
Listing './lib/python3.5/site-packages/collective.externaleditor-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
